postgresql-common (110) UNRELEASED; urgency=low

  * t/080_start.conf.t: Update for common init.d script.

 -- Martin Pitt <mpitt@debian.org>  Fri, 30 Jul 2010 19:36:52 +0200

postgresql-common (109) unstable; urgency=low

  * pg_lsclusters: Fix "uninitialized value" warning when a cluster's data
    directory is not set. This is a rather fatal problem anyway, but we can
    present it in a nicer way. Thanks Christoph Berg! (Closes: #589014)
  * Migrate to a common init script for all server versions, to avoid
    providing the "postgresql" service in multiple packages (which causes
    insserv to complain bitterly):
    - debian/init.d-functions: Add function get_versions() which returns all
      installed versions, but filters out the ones which have their own init
      script. With that, we can run newer common versions with older server
      packages.
    - debian/maintscripts-functions: Add function stop_version() (to be called
      from "prerm upgrade"), and start cluster in configure_version() if there
      is no version specific init script.
    - Add debian/postgresql-common.postgresql.init: Common init script for all
      installed server versions.
    - debian/rules: Install common init script.
    - (Closes: #589524)
  * Add debian/source/format: 3.0 (native).
  * debian/control: Bump Standards-Version to 3.9.0 (no changes necessary).

 -- Martin Pitt <mpitt@debian.org>  Mon, 19 Jul 2010 23:20:13 +0200

postgresql-common (108) unstable; urgency=low

  * debian/supported-versions: Drop 8.3 from squeeze/unstable. Add 9.0 to all
    Debian/Ubuntu versions to support backports.
  * debian/README.Debian: Talk about 8.3 and 8.4, since those are the versions
    relevant to squeeze installs and upgrades.
  * pg_upgradecluster POD: Describe allowed characters in upgrade script file
    names.
  * debian/supported-versions: Add Ubuntu 10.10. Welcome, Maverick Meerkat!

 -- Martin Pitt <mpitt@debian.org>  Wed, 02 Jun 2010 10:42:17 +0200
