@@ -46,3 +46,19 @@ Description: manager for multiple PostgreSQL client versions
  transactions, foreign keys, views, sequences, subqueries, triggers,
  outer joins, multiversion concurrency control, and user-defined types
  and functions.
+
+Package: postgresql-server-dev-all
+Architecture: all
+Depends: ${misc:Depends}
+Description: extension build tool for multiple PostgreSQL versions
+ The postgresql-server-dev-all package provides the pg_buildext script for
+ simplifying packaging of a PostgreSQL extension supporting multiple major
+ versions of the product.
+ .
+ PostgreSQL is a fully featured object-relational database management
+ system. It supports a large part of the SQL standard and is designed
+ to be extensible by users in many aspects. Its features include ACID
+ transactions, foreign keys, views, sequences, subqueries, triggers,
+ outer joins, multiversion concurrency control, and user-defined types
+ and functions.
+
