@@ -11,6 +11,9 @@ build/postgresql-common::
 	for p in $(POD1PROGS); do $(POD2MAN) --quotes=none --section 1 $$p > $$p.1; done
 	for p in $(POD8PROGS); do $(POD2MAN) --quotes=none --section 8 $$p > $$p.8; done
 
+build/postgresql-server-dev-all:: pg_buildext.pod
+	$(POD2MAN) --quotes=none --section 1 $< > `basename $< .pod`.1
+
 install/postgresql-common::
 	install -D -m 644 debian/postgresql-common.lintian $(DEB_DESTDIR)/usr/share/lintian/overrides/postgresql-common
 
@@ -22,3 +25,5 @@ cleanbuilddir/postgresql-common::
 	for p in $(POD1PROGS); do rm -f $$p.1; done
 	for p in $(POD8PROGS); do rm -f $$p.8; done
 
+cleanbuilddir/postgresql-server-dev-all::
+	rm -f pg_buildext.1
