@@ -1,0 +1,64 @@
+#!/bin/bash
+#
+# build a PostgreSQL module based on PGXS for give list of supported major
+# versions
+#
+# Author: Dimitri Fontaine <dfontaine@hi-media.com>
+
+action=$1
+srcdir=$2
+target=$3
+opt=$4
+
+function prepare_env() {
+    if [ ! -d $srcdir ]; then
+	echo "Error: no such directory '$srcdir'"
+	exit 1
+    fi
+    version=$1
+    vtarget=`echo $target | sed -e "s:%v:$version:"`
+    pgc="/usr/lib/postgresql/$version/bin/pg_config"
+    cflags=`$pgc --cflags`
+}
+
+function build() {
+    prepare_env $1
+
+    mkdir -p $vtarget
+    cd $vtarget
+    make -f $srcdir/Makefile CFLAGS="$cflags $opt" PG_CONFIG="$pgc" VPATH="$srcdir"
+    cd -
+}
+
+function clean() {
+    prepare_env $1
+    make clean PG_CONFIG="$pgc"
+    rm -rf $vtarget
+}
+
+function versions() {
+    for v in `/usr/share/postgresql-common/supported-versions`
+    do
+	grep -q "^$v" $srcdir/debian/pgversions && echo $v
+    done
+}
+
+for v in `versions`
+do
+    case "$action" in
+	"supported-versions")
+	    echo $v
+	    ;;
+
+	build|clean)
+	    # be verbose?
+	    $action $v
+	    ;;
+
+	*)
+	    echo "$0: unsupported $action."
+	    ;;
+    esac
+done
+
+exit 0
